--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="fb_login_protocol_scheme">fb128912617810213</string>
     <string name="title_activity_main2">UserProfile</string>
     <string name="text_logout">Logout</string>
+    <string name="error_network">No internet connection!</string>
 </resources>
