--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="change_radius">Change radius</string>
+    <string name="cancel">Cancel</string>
+    <string name="text_select_value_km">Select a value in km</string>
 </resources>
